# check-source-origin

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/check_source_origin/: cli.py  depsdev.py  diff.py  download.py  github.py  known_repos.py  models.py  pypi.py  resolve.py  verify.py
tests/: test_cli.py  test_depsdev.py  test_diff.py  test_download.py  test_github.py  test_known_repos.py  test_models.py  test_pypi.py  test_resolve.py  test_verify.py
tests/fixtures/: depsdev_flask_3.1.1.json  depsdev_requests_2.31.0.json  pypi_flask_3.1.1.json  pypi_requests_2.31.0.json
